--- a/REST/views/new.ejs
+++ b/REST/views/new.ejs
@@ -7,11 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Add New Comment</h1>
     <form action="/comments" method="post">
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username">
-        <label for="comment">Comment</label>
-        <input type="text" name="comment" id="comment">
+        <label for="username">Username</label><br>
+        <input type="text" name="username" id="username"><br><br>
+        <label for="comment">Comment</label><br>
+        <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Enter your comment"></textarea><br><br>
         <button type="submit">submit</button>
     </form>
 </body>
