--- a/REST/views/index.ejs
+++ b/REST/views/index.ejs
@@ -12,8 +12,18 @@
         <p><span><%=com.id %> </span><%=com.user %>: <span><%=com.text %></span> </p>
     <% })%>
 
-    
+    <form id="show">
+        <label for="id">Enter Comment Id</label>
+        <input type="text" name="id" id="id" required>
+        <button>Show</button>
+    </form>
     <a href="http://localhost:5050/comments/new">New Comment</a>
-    
+    <script>
+        document.getElementById('show').addEventListener('submit',show);
+        function show(e){
+            e.preventDefault();
+            window.location.href="http://localhost:5050/comments/"+document.getElementById("id").value;
+        }
+    </script>
 </body>
 </html>
